--- a/glide.yaml
+++ b/glide.yaml
@@ -3,6 +3,10 @@ import:
 - package: github.com/garyburd/redigo
   subpackages:
   - redis
-- package: github.com/gin-gonic/gin
+- package: github.com/pquerna/ffjson
+  subpackages:
+  - ffjson
+- package: github.com/shopspring/decimal
 - package: gopkg.in/yaml.v2
 - package: github.com/go-sql-driver/mysql
+- package: github.com/gin-gonic/gin
