--- a/glide.yaml
+++ b/glide.yaml
@@ -7,6 +7,6 @@ import:
   subpackages:
   - ffjson
 - package: github.com/shopspring/decimal
-- package: gopkg.in/yaml.v2
+- package: github.com/robfig/config
 - package: github.com/go-sql-driver/mysql
 - package: github.com/gin-gonic/gin
