--- a/glide.yaml
+++ b/glide.yaml
@@ -1,12 +1,18 @@
 package: .
 import:
-- package: github.com/garyburd/redigo
-  subpackages:
-  - redis
-- package: github.com/pquerna/ffjson
-  subpackages:
-  - ffjson
-- package: github.com/shopspring/decimal
-- package: github.com/robfig/config
-- package: github.com/go-sql-driver/mysql
-- package: github.com/gin-gonic/gin
+  - package: github.com/garyburd/redigo
+    subpackages:
+    - redis
+  - package: github.com/pquerna/ffjson
+    subpackages:
+    - ffjson
+  - package: github.com/shopspring/decimal
+  - package: github.com/robfig/config
+  - package: github.com/go-sql-driver/mysql
+  - package: github.com/gin-gonic/gin
+  - package: github.com/gin-contrib/sessions
+    subpackages:
+    - sessions
+    - memstore
+  - package: github.com/gorilla/sessions
+  - package: github.com/quasoft/memstore
